<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:fitsSystemWindows="true"
   tools:context="com.biankaroppelt.masterthesis.MobileActivity">

   <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />

   </android.support.design.widget.AppBarLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/activity_horizontal_margin"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputEditText
            android:id="@+id/input_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/pilot_study_hint_participant"
            android:inputType="number"
            android:textColorHint="@color/secondaryText" />

      </android.support.design.widget.TextInputLayout>

      <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/input_finger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:hint="@string/pilot_study_hint_finger"
         android:textColorHint="#05ab9a"
         app:met_floatingLabel="normal" />

      <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
         android:id="@+id/input_rotation_dimension"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:hint="@string/pilot_study_hint_rotation_dimension"
         android:textColorHint="#05ab9a"
         app:met_floatingLabel="normal" />

      <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputEditText
            android:id="@+id/input_hand_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/pilot_study_hint_hand_size"
            android:textColorHint="@color/secondaryText" />

      </android.support.design.widget.TextInputLayout>

      <CheckBox
         android:id="@+id/input_handedness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:checked="true"
         android:text="@string/pilot_study_hint_handedness" />

      <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">

         <Button
            android:id="@+id/button_data_start"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilot_study_button_start" />

         <Button
            android:id="@+id/button_data_stop"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilot_study_button_stop"
            android:visibility="gone" />

         <Button
            android:id="@+id/button_data_send"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilot_study_button_send"
            android:visibility="gone" />

         <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
      </RelativeLayout>

   </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

