<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:orientation="horizontal"
      android:weightSum="6">

      <TextView
         android:id="@+id/sensor_info_1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         android:maxLines="5"
         android:text="@string/sensor_data_list_title_1" />

      <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal">

         <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent" />

         <TextView
            android:id="@+id/sensor_info_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="5"
            android:text="@string/sensor_data_list_title_2" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
         android:orientation="horizontal">

         <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/colorAccent" />

         <TextView
            android:id="@+id/sensor_info_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="5"
            android:text="@string/sensor_data_list_title_3" />

      </LinearLayout>

   </LinearLayout>

   <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorAccent" />
</LinearLayout>